fixed align on search bar

--- a/amundsen_application/static/js/components/NavBar/styles.scss
+++ b/amundsen_application/static/js/components/NavBar/styles.scss
@@ -80,7 +80,11 @@ $avatar-container-size: 40px;
   .search-bar {
     flex-grow: 1;
     margin: auto $spacer-2 auto auto;
+  }
+
+  #search-bar {
     max-width: 560px;
+    margin: auto 0px auto auto;
   }
 
   .logo-icon {
